--- a/DrinkWater/DrinkWater/MainWindow.xaml
+++ b/DrinkWater/DrinkWater/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DrinkWater.MainWindow"
+﻿<Window x:Class="DrinkWater.Main"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DrinkWater"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow"  Height="1080" Width="1920" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen" WindowState="Minimized">
+        Title="Main"  Height="1080" Width="1920" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen" WindowState="Minimized">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
@@ -28,13 +28,17 @@
         <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
         <Style x:Key="ProfileButton" TargetType="{x:Type Button}">
             <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="Background" Value="#F39A9A"/>
             <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="1"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="Width" Value="68"/>
+            <Setter Property="Height" Value="68"/>
+            <Setter Property="FontSize" Value="30"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
@@ -69,7 +73,11 @@
             <Setter Property="Padding" Value="5"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Top"/>
-            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Width" Value="98"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="FontFamily" Value="Montserra"/>
+            <Setter Property="Margin"  Value="100,0,0,0"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Label}">
@@ -105,17 +113,19 @@
         <SolidColorBrush x:Key="Button.Disabled.Foreground1" Color="#FF838383"/>
         <Style x:Key="AddButton" TargetType="{x:Type Button}">
             <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual1}"/>
-            <Setter Property="Background" Value="{StaticResource Button.Static.Background1}"/>
+            <Setter Property="Background" Value="#F39A9A"/>
             <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border1}"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
             <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FontFamily" Value="Montserrat"/>
+            <Setter Property="FontSize" Value="22"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Padding" Value="1"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="border" CornerRadius="4" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                        <Border x:Name="border" CornerRadius="20" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
                             <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -176,17 +186,23 @@
             <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
             <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
             <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
             <Setter Property="HorizontalContentAlignment" Value="Left"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="AllowDrop" Value="true"/>
             <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
             <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Width" Value="98"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="FontFamily" Value="Montserra"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="100,31,0,0"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="True">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="20" SnapsToDevicePixels="True">
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -233,15 +249,17 @@
         <SolidColorBrush x:Key="Button.Disabled.Foreground3" Color="#FF838383"/>
         <Style x:Key="ScrollButton" TargetType="{x:Type Button}">
             <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual3}"/>
-            <Setter Property="Background" Value="White"/>
+            <Setter Property="Background" Value="#336AA6F5"/>
             <Setter Property="BorderBrush" Value="White"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Padding" Value="1"/>
             <Setter Property="FontFamily" Value="Marlett"/>
-            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Width" Value="42"/>
+            <Setter Property="Height" Value="44"/>
+            <Setter Property="FontSize" Value="30"/>
 
             <Setter Property="Template">
                 <Setter.Value>
@@ -272,15 +290,21 @@
             </Setter>
         </Style>
 
+
     </Window.Resources>
     <Grid Height="810" Width="1440">
-        <Rectangle HorizontalAlignment="Left" Margin="60,155,0,65" Stroke="Black" Fill="#FFDDDDDD" Width="659"/>
-        <lvc:CartesianChart x:Name="Chart" Series="{Binding SeriesCollection}" LegendLocation="Right"  Margin="93,241,753,100" Background="White">
-            <lvc:CartesianChart.AxisX  >
-                <lvc:Axis x:Name="Row" Visibility="Hidden" MinValue="0" MaxValue="1"  />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Rectangle HorizontalAlignment="Left" Margin="953,210,0,10" Fill="#336AA6F5" RadiusX="20" RadiusY="20" Width="372" Panel.ZIndex="0" Grid.ColumnSpan="2"/>
+        <Rectangle HorizontalAlignment="Left" Margin="61,210,0,10" Fill="#336AA6F5"  RadiusX="20" RadiusY="20" Width="659" Grid.ColumnSpan="2"/>
+        <lvc:CartesianChart x:Name="Chart" Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="94,296,752,45" Background="White" Grid.ColumnSpan="2">
+            <lvc:CartesianChart.AxisX >
+                <lvc:Axis x:Name="Row"  MinValue="0" MaxValue="1" MinWidth="206" Visibility="Hidden"/>
             </lvc:CartesianChart.AxisX>
             <lvc:CartesianChart.AxisY >
-                <lvc:Axis x:Name="Milliliters" Title="Milliliters" MinValue="0" >
+                <lvc:Axis x:Name="Milliliters" Title="Milliliters" MinValue="0">
                     <lvc:Axis.Sections>
                         <lvc:AxisSection Name="BalanceLine" Value="2000" StrokeThickness="3" Stroke="#F9D648">
                             <lvc:AxisSection.Fill>
@@ -292,28 +316,38 @@
             </lvc:CartesianChart.AxisY>
         </lvc:CartesianChart>
 
-        <Button Style="{DynamicResource AddButton}" Content="Add" Height="46" Margin="0,0,68,65" VerticalAlignment="Bottom" Click="Add" FontSize="18" Visibility="Visible" HorizontalAlignment="Right" Width="113" />
-        <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid1"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="972,194,0,0" Height="35"/>
-        <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount1" HorizontalAlignment="Left" Margin="972,235,0,0" Text="100" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" Height="26"/>
-        <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid2"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="972,336,0,0" Height="34"/>
-        <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount2" HorizontalAlignment="Left" Margin="972,378,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" Height="34"/>
-        <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid3" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="972,485,0,0" Height="36"/>
-        <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount3" HorizontalAlignment="Left" Margin="972,526,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" Height="34"/>
-        <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid4" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="972,627,0,0" Height="34"/>
-        <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount4" HorizontalAlignment="Left" Margin="972,667,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" Height="43"/>
-        <Button Style="{DynamicResource ScrollButton}" Content="5" HorizontalAlignment="Left" Margin="938,155,0,0" VerticalAlignment="Top" Height="35" Width="25" Click="Up_Click" RenderTransformOrigin="0.64,1.378" />
-        <Button Style="{DynamicResource ScrollButton}" Content="6" HorizontalAlignment="Left" Margin="938,711,0,0" VerticalAlignment="Top" Height="34" Width="25" Click="Down_Click" RenderTransformOrigin="0.64,1.365" />
-        <Button Style="{DynamicResource ProfileButton}" Content="Profile" HorizontalAlignment="Right" Margin="0,10,150,0" VerticalAlignment="Top" Width="68" Height="68"/>
-        <Button Style="{DynamicResource ProfileButton}" Content="Settings" HorizontalAlignment="Right" Margin="0,10,48,0" VerticalAlignment="Top" Width="68" Height="68"/>
-
-
-        <Image x:Name="ImageBox1" Width="54"  Margin="826,193,560,483"  Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" />
-        <Image x:Name="ImageBox2" Width="54" Margin="826,327,560,352" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" />
-        <Image x:Name="ImageBox3" Width="54" Margin="826,466,560,212" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" />
-        <Image x:Name="ImageBox4" Width="54" Margin="826,598,560,80" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" />
-        <Label Content="Statistics of drinking water per day" HorizontalAlignment="Left" Height="49" Margin="92,173,0,0" VerticalAlignment="Top" Width="594" FontSize="28" RenderTransformOrigin="0.532,0.535"/>
-        <Rectangle HorizontalAlignment="Left" Height="61" Margin="61,17,0,0" Stroke="Black" VerticalAlignment="Top" Width="61" Fill="#FFDDDDDD" AutomationProperties.Name="Logo"/>
-        <Label Content="Logo" HorizontalAlignment="Left" Height="33" Margin="70,31,0,0" VerticalAlignment="Top" Width="44" FontSize="14" RenderTransformOrigin="0.532,0.535"/>
+        <Button Style="{DynamicResource AddButton}" Content="Add" Height="46" Margin="0,0,244,32" VerticalAlignment="Bottom" Click="Add" FontSize="18" Visibility="Visible" HorizontalAlignment="Right" Width="114" Grid.ColumnSpan="2" />
+        <Grid x:Name="LabelTextBox1" HorizontalAlignment="Left" Height="58" Margin="1033,290,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid1"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount1" HorizontalAlignment="Left" Text="" TextWrapping="Wrap" VerticalAlignment="Top" />
+            <Image x:Name="ImageBox1" Width="54"  Margin="0,3,0,0"  Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" RenderTransformOrigin="0.533,0.181" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        </Grid>
+        <Grid x:Name="LabelTextBox2" HorizontalAlignment="Left"  Height="58" Margin="1033,385,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid2"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount2" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <Image x:Name="ImageBox2" Width="54" Margin="0,4,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" HorizontalAlignment="Left" />
+        </Grid>
+        <Grid x:Name="LabelTextBox3"  HorizontalAlignment="Left" Height="57" Margin="1033,485,0,0" VerticalAlignment="Top" Width="295" Grid.ColumnSpan="2">
+            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid3" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount3" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <Image x:Name="ImageBox3" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        </Grid>
+        <Grid x:Name="LabelTextBox4" HorizontalAlignment="Left" Height="57" Margin="1033,585,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid4" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount4" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <Image x:Name="ImageBox4" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        </Grid>
+        <Button Style="{DynamicResource ScrollButton}" Content="5" HorizontalAlignment="Left" Margin="1118,233,0,0" VerticalAlignment="Top" Click="Up_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
+        <Button Style="{DynamicResource ScrollButton}" Content="6" HorizontalAlignment="Left" Margin="1118,681,0,0" VerticalAlignment="Top" Click="Down_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
+        <Button Style="{DynamicResource ProfileButton}" x:Name="ProfileButton" FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" Margin="0,0,112,732" Click="ProfileButton_Click" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
+        <Button Style="{DynamicResource ProfileButton}" x:Name="SettingButton" FontFamily="Segoe MDL2 Assets" Content="&#xE115;"  Margin="0,10,10,0" Click="Setting_Click" Grid.ColumnSpan="2"/>
+        <Label Content="Statistics of drinking water per day" HorizontalAlignment="Left" Height="49" Margin="93,228,0,0" VerticalAlignment="Top" Width="594" FontSize="30" RenderTransformOrigin="0.532,0.535" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left"  Height="68" Width="68" Margin="14,0,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Ellipse HorizontalAlignment="Left" Opacity="0.6" VerticalAlignment="Top" Width="68" Height="68" Margin="61,10,0,0" Grid.ColumnSpan="2">
+            <Ellipse.Fill>
+                <ImageBrush ImageSource="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\logo.png" />
+            </Ellipse.Fill>
+        </Ellipse>
 
 
     </Grid>
