--- a/DrinkWater/DrinkWater/MainWindow.xaml
+++ b/DrinkWater/DrinkWater/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:DrinkWater"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="Main"  Height="1080" Width="1920" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen" WindowState="Minimized">
+        SizeToContent="WidthAndHeight"
+        Title="Main"  Height="900" Width="1600" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen" WindowState="Minimized">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
@@ -202,7 +203,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="20" SnapsToDevicePixels="True">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="15" SnapsToDevicePixels="True">
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -292,63 +293,63 @@
 
 
     </Window.Resources>
-    <Grid Height="810" Width="1440">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Rectangle HorizontalAlignment="Left" Margin="953,210,0,10" Fill="#336AA6F5" RadiusX="20" RadiusY="20" Width="372" Panel.ZIndex="0" Grid.ColumnSpan="2"/>
-        <Rectangle HorizontalAlignment="Left" Margin="61,210,0,10" Fill="#336AA6F5"  RadiusX="20" RadiusY="20" Width="659" Grid.ColumnSpan="2"/>
-        <lvc:CartesianChart x:Name="Chart" Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="94,296,752,45" Background="White" Grid.ColumnSpan="2">
-            <lvc:CartesianChart.AxisX >
-                <lvc:Axis x:Name="Row"  MinValue="0" MaxValue="1" MinWidth="206" Visibility="Hidden"/>
-            </lvc:CartesianChart.AxisX>
-            <lvc:CartesianChart.AxisY >
-                <lvc:Axis x:Name="Milliliters" Title="Milliliters" MinValue="0">
-                    <lvc:Axis.Sections>
-                        <lvc:AxisSection Name="BalanceLine" Value="2000" StrokeThickness="3" Stroke="#F9D648">
-                            <lvc:AxisSection.Fill>
-                                <SolidColorBrush Color="#A3A3FF" Opacity=".4"></SolidColorBrush>
-                            </lvc:AxisSection.Fill>
-                        </lvc:AxisSection>
-                    </lvc:Axis.Sections>
-                </lvc:Axis>
-            </lvc:CartesianChart.AxisY>
-        </lvc:CartesianChart>
+    <Viewbox>
+        <Grid Height="810" Width="1440">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0*"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Rectangle HorizontalAlignment="Left" Margin="986,159,0,61" Fill="#336AA6F5" RadiusX="20" RadiusY="20" Width="372" Panel.ZIndex="0" Grid.ColumnSpan="2"/>
+            <Rectangle HorizontalAlignment="Left" Margin="94,159,0,61" Fill="#336AA6F5"  RadiusX="20" RadiusY="20" Width="659" Grid.ColumnSpan="2"/>
+            <lvc:CartesianChart x:Name="Chart" Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="127,245,719,96" Background="White" Grid.ColumnSpan="2">
+                <lvc:CartesianChart.AxisX >
+                    <lvc:Axis x:Name="Row"  MinValue="0" MaxValue="1" MinWidth="206" Visibility="Hidden"/>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY >
+                    <lvc:Axis x:Name="Milliliters" Title="Milliliters" MinValue="0">
+                        <lvc:Axis.Sections>
+                            <lvc:AxisSection Name="BalanceLine" Value="2000" StrokeThickness="3" Stroke="#F9D648">
+                                <lvc:AxisSection.Fill>
+                                    <SolidColorBrush Color="#A3A3FF" Opacity=".4"></SolidColorBrush>
+                                </lvc:AxisSection.Fill>
+                            </lvc:AxisSection>
+                        </lvc:Axis.Sections>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
 
-        <Button Style="{DynamicResource AddButton}" Content="Add" Height="46" Margin="0,0,244,32" VerticalAlignment="Bottom" Click="Add" FontSize="18" Visibility="Visible" HorizontalAlignment="Right" Width="114" Grid.ColumnSpan="2" />
-        <Grid x:Name="LabelTextBox1" HorizontalAlignment="Left" Height="58" Margin="1033,290,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
-            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid1"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount1" HorizontalAlignment="Left" Text="" TextWrapping="Wrap" VerticalAlignment="Top" />
-            <Image x:Name="ImageBox1" Width="54"  Margin="0,3,0,0"  Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" RenderTransformOrigin="0.533,0.181" VerticalAlignment="Top" HorizontalAlignment="Left" />
+            <Button Style="{DynamicResource AddButton}" Content="Add" Height="46" Margin="0,0,211,83" VerticalAlignment="Bottom" Click="Add" FontSize="18" Visibility="Visible" HorizontalAlignment="Right" Width="114" Grid.ColumnSpan="2" />
+            <Grid x:Name="LabelTextBox1" HorizontalAlignment="Left" Height="58" Margin="1066,239,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+                <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid1"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount1" HorizontalAlignment="Left" Text="" TextWrapping="Wrap" VerticalAlignment="Top" />
+                <Image x:Name="ImageBox1" Width="54"  Margin="0,3,0,0"  Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" RenderTransformOrigin="0.533,0.181" VerticalAlignment="Top" HorizontalAlignment="Left" />
+            </Grid>
+            <Grid x:Name="LabelTextBox2" HorizontalAlignment="Left"  Height="58" Margin="1066,334,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+                <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid2"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount2" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+                <Image x:Name="ImageBox2" Width="54" Margin="0,4,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" HorizontalAlignment="Left" />
+            </Grid>
+            <Grid x:Name="LabelTextBox3"  HorizontalAlignment="Left" Height="57" Margin="1066,434,0,0" VerticalAlignment="Top" Width="295" Grid.ColumnSpan="2">
+                <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid3" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount3" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+                <Image x:Name="ImageBox3" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
+            </Grid>
+            <Grid x:Name="LabelTextBox4" HorizontalAlignment="Left" Height="57" Margin="1066,534,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
+                <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid4" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount4" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
+                <Image x:Name="ImageBox4" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
+            </Grid>
+            <Button Style="{DynamicResource ScrollButton}" Content="5" HorizontalAlignment="Left" Margin="1151,182,0,0" VerticalAlignment="Top" Click="Up_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
+            <Button Style="{DynamicResource ScrollButton}" Content="6" HorizontalAlignment="Left" Margin="1151,630,0,0" VerticalAlignment="Top" Click="Down_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
+            <Button Style="{DynamicResource ProfileButton}" x:Name="ProfileButton" FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" Margin="0,0,112,732" Click="ProfileButton_Click" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
+            <Button Style="{DynamicResource ProfileButton}" x:Name="SettingButton" FontFamily="Segoe MDL2 Assets" Content="&#xE115;"  Margin="0,10,10,0" Click="Setting_Click" Grid.ColumnSpan="2"/>
+            <Label Content="Statistics of drinking water per day" HorizontalAlignment="Left" Height="49" Margin="126,177,0,0" VerticalAlignment="Top" Width="594" FontSize="30" RenderTransformOrigin="0.532,0.535" Grid.ColumnSpan="2"/>
+            <Image HorizontalAlignment="Left"  Height="68" Width="68" Margin="14,0,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+            <Ellipse HorizontalAlignment="Left" Opacity="0.6" VerticalAlignment="Top" Width="68" Height="68" Margin="94,10,0,0" Grid.ColumnSpan="2">
+                <Ellipse.Fill>
+                    <ImageBrush ImageSource="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\logo.png" />
+                </Ellipse.Fill>
+            </Ellipse>
         </Grid>
-        <Grid x:Name="LabelTextBox2" HorizontalAlignment="Left"  Height="58" Margin="1033,385,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
-            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid2"  Content="" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount2" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <Image x:Name="ImageBox2" Width="54" Margin="0,4,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" HorizontalAlignment="Left" />
-        </Grid>
-        <Grid x:Name="LabelTextBox3"  HorizontalAlignment="Left" Height="57" Margin="1033,485,0,0" VerticalAlignment="Top" Width="295" Grid.ColumnSpan="2">
-            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid3" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount3" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <Image x:Name="ImageBox3" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
-        </Grid>
-        <Grid x:Name="LabelTextBox4" HorizontalAlignment="Left" Height="57" Margin="1033,585,0,0" VerticalAlignment="Top" Width="292" Grid.ColumnSpan="2">
-            <Label Style="{DynamicResource TypeOfLiquid}" x:Name="TypeOfLiquid4" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Style="{DynamicResource AmountStyle}" x:Name="Amount4" HorizontalAlignment="Left"  Text="" TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <Image x:Name="ImageBox4" Width="54" Margin="0,3,0,0" Source="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\w128h1281385326600water.png" VerticalAlignment="Top" HorizontalAlignment="Left" />
-        </Grid>
-        <Button Style="{DynamicResource ScrollButton}" Content="5" HorizontalAlignment="Left" Margin="1118,233,0,0" VerticalAlignment="Top" Click="Up_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
-        <Button Style="{DynamicResource ScrollButton}" Content="6" HorizontalAlignment="Left" Margin="1118,681,0,0" VerticalAlignment="Top" Click="Down_Click" Background="#FFE1EDFD" Grid.ColumnSpan="2" />
-        <Button Style="{DynamicResource ProfileButton}" x:Name="ProfileButton" FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" Margin="0,0,112,732" Click="ProfileButton_Click" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
-        <Button Style="{DynamicResource ProfileButton}" x:Name="SettingButton" FontFamily="Segoe MDL2 Assets" Content="&#xE115;"  Margin="0,10,10,0" Click="Setting_Click" Grid.ColumnSpan="2"/>
-        <Label Content="Statistics of drinking water per day" HorizontalAlignment="Left" Height="49" Margin="93,228,0,0" VerticalAlignment="Top" Width="594" FontSize="30" RenderTransformOrigin="0.532,0.535" Grid.ColumnSpan="2"/>
-        <Image HorizontalAlignment="Left"  Height="68" Width="68" Margin="14,0,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <Ellipse HorizontalAlignment="Left" Opacity="0.6" VerticalAlignment="Top" Width="68" Height="68" Margin="61,10,0,0" Grid.ColumnSpan="2">
-            <Ellipse.Fill>
-                <ImageBrush ImageSource="C:\Users\olha0\OneDrive\Документи\GitHub\Drink_water\DrinkWater\DrinkWater\images\logo.png" />
-            </Ellipse.Fill>
-        </Ellipse>
-
-
-    </Grid>
+    </Viewbox>
 </Window>
