--- a/DrinkWater/DrinkWater/LogReg/Registration.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Registration.xaml
@@ -31,10 +31,10 @@
         <Label Content="Email:" HorizontalAlignment="Left" Margin="266,148,0,0"  Width="60" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
         <Label Content="Password:" Margin="266,223,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Width="86" Height="26" VerticalAlignment="Top"/>
         <Label Content="Confirm password:" Margin="266,300,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Height="26" Width="156" VerticalAlignment="Top"/>
-        <Label x:Name="labelUsername" Visibility="Hidden" Content="label" HorizontalAlignment="Left"  Margin="258,127,0,0" VerticalAlignment="Top" Background="White"  Grid.Column="2" Height="26" Width="377" />
-        <Label x:Name="labelEmail" Visibility="Hidden" Content="label" HorizontalAlignment="Left" Margin="258,197,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="377"   />
-        <Label x:Name="labelPassword" Visibility="Hidden"  Content="Label" HorizontalAlignment="Left"  Margin="258,273,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="377"/>
-        <Label x:Name="labelPasswordConfirm" Visibility="Hidden" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="258,347,0,0"    VerticalAlignment="Top" Width="377" Height="26"/>
+        <Label x:Name="labelUsername" Visibility="Hidden" Content="label" HorizontalAlignment="Left"  Margin="270,127,0,0" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="365" />
+        <Label x:Name="labelEmail" Visibility="Hidden" Content="label" HorizontalAlignment="Left" Margin="270,197,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="365"   />
+        <Label x:Name="labelPassword" Visibility="Hidden" Content="Label" HorizontalAlignment="Left"  Margin="270,273,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="365"/>
+        <Label x:Name="labelPasswordConfirm" Visibility="Hidden" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="270,347,0,0"    VerticalAlignment="Top" Width="365" Height="26"/>
         <Label Content=" Sign up" Grid.Column="2" HorizontalAlignment="Left" Margin="362,32,0,0" VerticalAlignment="Top" Width="108" AutomationProperties.HelpText="" FontSize="16" FontFamily="Bahnschrift SemiBold" FontStyle="Italic" FontWeight="Normal" Opacity="0.985" Height="31"/>
     </Grid>
 </Window>
