--- a/DrinkWater/DrinkWater/Settings.xaml
+++ b/DrinkWater/DrinkWater/Settings.xaml
@@ -271,13 +271,17 @@
                 <Label x:Name="AgeLabel" Content="Age:" FontSize="28" HorizontalAlignment="Left" Margin="0,267,0,0" VerticalAlignment="Top" Width="96" Height="50" FontWeight="Bold"/>
                 <Label x:Name ="ActivityTimeLabel2" Content="Going to bed:" FontSize="28" HorizontalAlignment="Left" Margin="568,416,0,0" VerticalAlignment="Top" Width="198" Visibility="Visible" FontWeight="Bold"/>
             </Grid>
-            <Button x:Name="ChangeAvatar" Content="Change Avatar" FontSize="24" HorizontalAlignment="Left" Margin="178,412,0,0" VerticalAlignment="Top" Width="179" Height="45" Click="ChangeAvatar_Click" Background="Transparent" BorderBrush="Transparent" Foreground="#FFEB5757" FontWeight="Bold"/>
-            <Button Style="{DynamicResource ProfileButton}"  FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" x:Name="ProfileWindowButton" FontSize="36" HorizontalAlignment="Left" Margin="1715,44,0,0" VerticalAlignment="Top" Height="68" Width="68" Click="ProfileWindowButton_Click" FontWeight="Bold" BorderBrush="#FFF18989" Background="#FFF18989"/>
-            <Button Style="{DynamicResource ScrollButton}" x:Name="Main" FontFamily="Segoe MDL2 Assets" Content="&#xE76B;" HorizontalAlignment="Left" Height="36" Margin="45,33,0,0" VerticalAlignment="Top" Width="50" Click="Main_Click" RenderTransformOrigin="0.487,0.482" FontSize="36" Foreground="#FFEB5757"/>
+            <Button x:Name="ChangeAvatar" Content="Change Avatar" FontSize="24" HorizontalAlignment="Left" Margin="178,412,0,0" VerticalAlignment="Top" Width="179" Height="45" Click="ChangeAvatar_Click" Background="Transparent" BorderBrush="Transparent" Foreground="#FF0A2140" FontWeight="Bold"/>
+            <Button Style="{DynamicResource ProfileButton}"  FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" x:Name="ProfileWindowButton" FontSize="36" HorizontalAlignment="Left" Margin="1715,44,0,0" VerticalAlignment="Top" Height="68" Width="68" Click="ProfileWindowButton_Click" FontWeight="Bold" BorderBrush="#FF0A2140" Background="#FF0A2140" Foreground="#FFC2B9B9"/>
+            <Button Style="{DynamicResource ScrollButton}" x:Name="Main" FontFamily="Segoe MDL2 Assets" Content="&#xE76B;" HorizontalAlignment="Left" Height="36" Margin="45,33,0,0" VerticalAlignment="Top" Width="50" Click="Main_Click" RenderTransformOrigin="0.487,0.482" FontSize="36" Foreground="#FF0A2140"/>
             <ComboBox HorizontalAlignment="Left" Height="8" Margin="301,85,0,0" VerticalAlignment="Top" Width="0"/>
             <Label Content="Settings" HorizontalAlignment="Left" Height="47" Margin="104,31,0,0" VerticalAlignment="Top" Width="102" FontSize="24" Foreground="#FF0A2140"/>
             <Label Content="Parameters" HorizontalAlignment="Left" Margin="701,177,0,0" VerticalAlignment="Top" FontSize="48" Foreground="#FF0A2140"/>
-            <Button  Style="{DynamicResource Buttons}" x:Name="SaveChangesButton" Content="Save" FontSize="24" FontFamily="Roboto" HorizontalAlignment="Left" Margin="1537,818,0,0" VerticalAlignment="Top" Width="202" Height="74" Click="SaveChangesButton_Click" Background="#FFF18989" BorderBrush="#FFF18989" Foreground="#FF0A2140" FontWeight="Bold"/>
+            <Button  Style="{DynamicResource Buttons}" x:Name="SaveChangesButton" Content="Save" FontSize="24" FontFamily="Roboto" HorizontalAlignment="Left" Margin="1537,818,0,0" VerticalAlignment="Top" Width="202" Height="74" Click="SaveChangesButton_Click" Background="#FF0A2140" BorderBrush="#FF0A2140" Foreground="#FFEAECF0" FontWeight="Bold">
+                <Button.Effect>
+                    <DropShadowEffect Color="DarkBlue" ShadowDepth="2" BlurRadius="10" />
+                </Button.Effect>
+            </Button>
 
         </Grid>
     </Viewbox>
